--- a/css/main.scss
+++ b/css/main.scss
@@ -96,6 +96,7 @@ h3 {
     font-family: "Source Code Pro";
     font-variant: small-caps;
     font-weight: bold;
+    font-size: 25px;
 
     &.tracktitle {
         font-variant: normal;
@@ -235,6 +236,40 @@ footer {
     }
 }
 
+.image-col {
+    max-width: 500px;
+    margin: 25px 0px;
+
+    .caption {
+        margin-top: 20px;
+    }
+}
+
+.geeklist {
+    margin-top: 80px;
+}
+
+.botlist {
+    margin-top: 60px;
+}
+
+.botlisting {
+    margin-bottom: 40px;
+
+    h3 {
+        margin-bottom: 10px;
+    }
+
+    .descrip {
+        padding-bottom: 5px;
+    }
+}
+
+.back {
+    margin-bottom: 60px;
+}
+
+
 @media (min-width: 900px) {
 
     h1.pg-title {
@@ -259,7 +294,7 @@ footer {
     }
 
     .textblock, .wide.col1 {
-        max-width: 700px;
+        width: 48%;
         margin-bottom: 40px;
     }
 
@@ -304,10 +339,6 @@ footer {
         margin: 25px 0px;
     }
 
-    h3 {
-        font-size: 25px;
-    }
-
     a {
         text-decoration: none;
         color: $fg;
@@ -332,39 +363,6 @@ footer {
     }
     .col2 {
         float: right;
-    }
-
-    .image-col {
-        max-width: 500px;
-        margin: 25px 0px;
-
-        .caption {
-            margin-top: 20px;
-        }
-    }
-
-    .geeklist {
-        margin-top: 80px;
-    }
-
-    .botlist {
-        margin-top: 60px;
-    }
-
-    .botlisting {
-        margin-bottom: 40px;
-
-        h3 {
-            margin-bottom: 10px;
-        }
-
-        .descrip {
-            padding-bottom: 5px;
-        }
-    }
-
-    .back {
-        margin-bottom: 60px;
     }
 
     /**************************************************************/
